Version 1.3.0
--------------------------------------------------------------------
18 November 2008
+ Changed ps_text.content column to longtext in mysql.

1 October 2008
+ Miniadmin title setting used (dependency)
+ Switched some javascript out to jquery
+ Updated: javascript/passinfo/head.js

30 September 2008
+ Added button to save changes and continue.
+ Updated: templates/page_form.tpl

17 September 2008
+ Caching page list

11 September 2008
+ Changed page links to page numbering.

10 September 2008
+ Changed admin links to icons to save room.
+ Deleting a child page reorders the remainder
+ Added permissions to the link in the admin menu.
+ Changed the created update date formats to something more compact


8 September 2008
+ Added ability to add pages to parent page.
+ Added ability to change page template.
+ Blank content will load Lorum upsum text instead of just
  non-breaking space.
+ Can delete uploaded templates now.
+ Added a "back to top" anchor.
+ Error message added for bad id on edit.
+ Checking character length after parseInput now.
+ Lorum text has hidden comment to help with parsing it out.
+ Comments added to update javascript
+ Added threesec-tbl for a more concrete layout structure.
+ Updated: javascript/delete_orphan/
  templates/page_templates/threesec-tbl/
  templates/orphans.tpl
  templates/page_form.tpl
  templates/page_frame.tpl
  templates/page_list.tpl
  templates/style.css
  templates/sublist.tpl
  templates/upload_template.tpl


21 August 2008
+ Added ability to upload page templates to module.
+ Updated: templates/upload_template.tpl

23 June 2008
+ Page templates can now control block type. The type can be image,
  document, media, or block. Block allows all three.
+ Dropping btype from the block. Not used.
+ Fixed bug if template only had one folder.
+ Added some new page templates.
+ Added some colorful pics to page template samples
+ Made single column different from text only icon.
+ Updated: templates/page_templates/