@@ -232,6 +232,7 @@ function pagesmith_update(&$content, $currentVersion)
         $files = array('javascript/passinfo/head.js', 'templates/page_form.tpl',
                        'javascript/delete_orphan/',
                        'javascript/confirm_delete/',
+                       'javascript/update/head.js',
                        'templates/page_templates/threesec-tbl/',
                        'templates/orphans.tpl',
                        'templates/page_form.tpl',
