@@ -1,5 +1,9 @@
 Version 1.3.0
 --------------------------------------------------------------------
+5 January 2009
++ Changed text submission method. Using a session that was already in
+  use to post instead of relying on javascript.
+
 18 November 2008
 + Changed ps_text.content column to longtext in mysql.
 
